<resources>
    <string name="app_name">OK Todo</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="cd_create_new_task">Create new task</string>
    <string name="create">Create</string>
    <string name="cd_close_menu">Close menu</string>
    <string name="create_a_note">Create a note</string>
    <string name="create_a_task">Create a task</string>
    <string name="all_tasks">All tasks</string>

    <string name="scan_qr_code">Scan QR-code</string>
    <string name="title_activity_settings">Settings</string>
    <string name="as_a_list">A list</string>
    <string name="as_a_calendar">A calendar</string>
    <string name="represent">Represent as</string>
    <string name="as_a_tree">A tree</string>
    <string name="title">I want to…</string>
    <string name="add_tag">Add tag</string>
    <string name="folder">Folder</string>
    <string name="deadline">Deadline</string>
    <string name="notifications">Notifications</string>

    <string name="once">Once</string>
    <string name="periodically">Periodically</string>
    <string name="super_task">Super task</string>
    <string name="subtasks">Subtasks</string>
    <string name="pre_task">Pre-task</string>
    <string name="desc">Notes</string>
    <string name="write_here_something">Write here something…</string>
    <string name="priority">Priority</string>
    <string name="show_hide">Show / hide</string>

    <string name="no_priority">Not chosen</string>
    <string name="high_priority">High</string>
    <string name="low_priority">Low</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="delete">DELETE</string>
    <string name="deleted_from_yr_tasks">deleted from your tasks</string>
    <string name="undo">Undo</string>
    <string name="task">Task</string>
    <string name="custom">Custom</string>
    <string name="done">Done</string>
    <string name="my_problems">My problems</string>
    <string name="no_deadline">No deadline</string>
    <string name="choose_importance">Choose importance</string>

    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="choose_deadline">Set deadline</string>
    <string name="invalid_title">Why don\'t you want to do something?</string>
    <string name="until">until</string>
    <string name="no_notifications">Disabled</string>
    <string name="daily_notifications">Daily notifications</string>
    <string name="daily_notifications_desc">Daily notifications at 10am about upcoming tasks.</string>
    <string name="notification_title">You have outstanding tasks</string>
    <string name="notification_content">See what you have planned</string>
    <string name="theme">Theme</string>>
    <string name="notifications_upcoming">If there are upcoming</string>
    <string name="notifications_on_deadline">If there are close to deadline</string>
    <string name="marked_as_done">marked as done</string>
    <string name="default_priority">Default</string>
    <string name="eye_disabled">Completed tasks will be hidden.</string>
    <string name="eye_enabled">Completed tasks will be shown.</string>
    <string name="cd_priority">Priority of your problem.</string>
    <string name="sync_title">We are syncing your problems</string>
    <string name="sync_text">It does not take much time.</string>
    <string name="sync_channel_name">Sync notification</string>
    <string name="synchronization">Synchronization</string>
    <string name="sync_in_foreground">Periodic synchronization</string>
    <string name="sync_period">Sync period</string>
    <string name="sync_six">Every 6 hours</string>
    <string name="sync_eight">Every 8 hours</string>
    <string name="sync_twelve">Every 12 hours</string>
    <string name="problem">Problem</string>
    <string name="cd_refresh_button">Button to refresh problems</string>
    <string name="network_unavailable">We can\'t sync your problems because your internet connection is unavailable.</string>
    <string name="loading_error">Something went wrong while syncing problems</string>
    <string name="retry">Retry</string>
</resources>