<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/custom">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:iconSpaceReserved="false"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="notify_upcoming"
            app:title="@string/notifications_upcoming" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="notify_close_deadline"
            app:title="@string/notifications_on_deadline" />

    </PreferenceCategory>
</PreferenceScreen>