<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/represent"
        android:textColor="@color/text_primary"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/cd_close_menu"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:tint="@color/icon_primary" />

    <TextView
        android:id="@+id/tv_as_a_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:paddingVertical="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/as_a_list"
        android:textColor="@color/text_secondary"
        android:textSize="17sp"
        app:drawableStartCompat="@drawable/ic_list_view"
        app:drawableTint="@color/icon_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_as_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:paddingVertical="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/as_a_calendar"
        android:textColor="@color/text_secondary"
        android:textSize="17sp"
        app:drawableStartCompat="@drawable/ic_calendar_view"
        app:drawableTint="@color/icon_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_as_a_list" />

    <TextView
        android:id="@+id/tv_as_a_tree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:paddingVertical="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/as_a_tree"
        android:textColor="@color/text_secondary"
        android:textSize="17sp"
        app:drawableStartCompat="@drawable/ic_tree_view"
        app:drawableTint="@color/icon_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_as_calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>