<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clipToPadding="false"
    android:paddingBottom="40dp"
    tools:context=".ui.edit.EditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@android:color/transparent"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:textColor="@color/text_primary"
                android:textSize="22sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/deadline"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_priority" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_deadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_deadline" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_deadline"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_deadline"
            app:strokeColor="@color/card_stroke"
            app:strokeWidth="0.8dp">

            <TextView
                android:id="@+id/tv_deadline_prop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/choose_date"
                android:textColor="@color/text_secondary"
                app:drawableStartCompat="@drawable/ic_calendar"
                app:drawableTint="@color/icon_inner" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="54dp"
            android:text="@string/priority"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_priority"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/cv_notifications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_priority"
            app:strokeColor="@color/card_stroke"
            app:strokeWidth="0.8dp">

            <TextView
                android:id="@+id/tv_priority_prop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/no_priority"
                android:textColor="@color/text_secondary"
                app:drawableEndCompat="@drawable/ic_dropdown"
                app:drawableTint="@color/icon_inner" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/cv_notifications"
            app:layout_constraintTop_toTopOf="@id/tv_priority" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_notifications"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_priority"
            app:layout_constraintTop_toTopOf="@id/cv_priority"
            app:strokeColor="@color/card_stroke"
            app:strokeWidth="0.8dp">

            <TextView
                android:id="@+id/tv_notifications_prop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/no_notifications"
                android:textColor="@color/text_secondary"
                app:drawableEndCompat="@drawable/ic_dropdown"
                app:drawableTint="@color/icon_inner" />

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>